must-gather/namespaces/openshift-ingress-canary/route.openshift.io/routes.yaml
---
apiVersion: route.openshift.io/v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/balance: roundrobin
    creationTimestamp: "2024-10-24T13:24:54Z"
    labels:
      ingress.openshift.io/canary: canary_controller
    managedFields:
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:haproxy.router.openshift.io/balance: {}
          f:labels:
            .: {}
            f:ingress.openshift.io/canary: {}
          f:ownerReferences:
            .: {}
            k:{"uid":"d10ab046-8158-43f4-904c-2a7fa025ba7d"}: {}
        f:spec:
          f:port:
            .: {}
            f:targetPort: {}
          f:subdomain: {}
          f:tls:
            .: {}
            f:insecureEdgeTerminationPolicy: {}
            f:termination: {}
          f:to:
            f:kind: {}
            f:name: {}
            f:weight: {}
          f:wildcardPolicy: {}
      manager: ingress-operator
      operation: Update
      time: "2024-10-24T13:24:54Z"
    - apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:spec:
          f:host: {}
        f:status:
          f:ingress: {}
      manager: openshift-router
      operation: Update
      subresource: status
      time: "2024-10-24T13:26:28Z"
    name: canary
    namespace: openshift-ingress-canary
    ownerReferences:
    - apiVersion: apps/v1
      controller: true
      kind: daemonset
      name: ingress-canary
      uid: d10ab046-8158-43f4-904c-2a7fa025ba7d
    resourceVersion: "41810"
    uid: ab536d33-2531-4900-b45d-c76f070774ef
  spec:
    port:
      targetPort: 8443
    subdomain: canary-openshift-ingress-canary
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: passthrough
    to:
      kind: Service
      name: ingress-canary
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2024-10-24T13:26:28Z"
        status: "True"
        type: Admitted
      host: canary-openshift-ingress-canary.apps.ci-op-2fcpj5j6-f6035.XXXXXXXXXXXXXXXXXXXXXX
      routerCanonicalHostname: router-default.apps.ci-op-2fcpj5j6-f6035.XXXXXXXXXXXXXXXXXXXXXX
      routerName: default
      wildcardPolicy: None
kind: RouteList
metadata:
  resourceVersion: "60701"
